CVS code -
- General
	- Better integration of View mode (-v) and multibuffer.
	  Fixes to new_file(), do_insertfile_void(), shortcut_init()
	  (David Lawrence Ramsey).
	- The keypad handling has changed (again).  We now use 
	  the keypad() function by default.  New flag -K, --keypad
	  allows the old behavior for those using the keypad arrow keys
	  and rxvt-based terminals.
- nano.c:
  die()
	- Only save files that were modified (David Lawrence Ramsey).
  do_cont()
	- Run signal_init() after doupdate() so ^Y wont suddenly
	  start suspending after returning from ^Z suspend in Hurd.
  signal_init()
	- Unconditionally disable VDSUSP if it exists, stops ^Y
	  suspending nano on the Hurd.
  help_init()
	- Typo fixes in help strings (Jordi).
	- New variable helplen needes cause currslen is not always
	  the length we want (bug found by David Lawrence Ramsey).
	- Typo in file switch string (found by David Lawrence Ramsey).
  main()
	- Handle Alt prev/next file keys (,.), as well as normal ones (<>).
	- Handle OS-specific insert keys by jump to do_insertkey (David
	  Lawrence Ramsey).
- files.c:
  read_file()
	- Make conversion message less confusing (suggested by Jordi).
- rcfile.c:
  parse_next_word()
	- Get rid of ptr == \n check to abort, screws up option
	  parsing (bug found by David Lawrence Ramsey)
- winio.c:
  update_line()
	- set realdata check to >= 1 && <= 31, lack of > 0 check screwed
	  high ascii characters.
  titlebar()
	- gettextized a pair of strings.
- m4/gettext.m4:
	- Back down to 1.1.3 version.
- faq.html:
	- Various link updates and other fixes (Aaron S. Hawley).
	- Typo fixes (David Lawrence Ramsey).
- AUTHORS
	- Add DLR.
- po/sv.po:
	- Swedish translation update (Christian Rose).
- po/ru.po, uk.po:
	- Russian and Ukrainian translations updates (Sergey A. Ribalchenko).
- po/ca.po, es.po:
	- Catalan and Spanish translations updates (Jordi).
- po/pl.po:
	- New Polish, partial translation, by Cezary Sliwa <sliwa@cft.edu.pl>.