@@ -1,12 +1,12 @@
 .\" Hey, EMACS: -*- nroff -*-
-.\" nano.1 is copyright 1999-2000 by
+.\" nano.1 is copyright 1999-2002 by
 .\" Chris Allegretta <chrisa@asty.org>
 .\"
 .\" This is free documentation, see the latest version of the GNU General
 .\" Public License for copying conditions. There is NO warranty.
 .\"
 .\" $Id$
-.TH NANO 1 "October 3, 2001"
+.TH NANO 1 "January 3, 2002"
 .\" Please adjust this date whenever revising the manpage.
 .\"
 .SH NAME
