@@ -2,7 +2,7 @@
 /**************************************************************************
  *   winio.c                                                              *
  *                                                                        *
- *   Copyright (C) 1999 Chris Allegretta                                  *
+ *   Copyright (C) 1999-2002 Chris Allegretta                             *
  *   This program is free software; you can redistribute it and/or modify *
  *   it under the terms of the GNU General Public License as published by *
  *   the Free Software Foundation; either version 2, or (at your option)  *
@@ -1808,7 +1808,7 @@ void do_credits(void)
 			anyonelse,
 			thankyou,
 			"", "", "", "",
-			"(c) 2000 Chris Allegretta",
+			"(c) 1999-2002 Chris Allegretta",
 			"", "", "", "",
 			"www.nano-editor.org"
     };
